fixed photo dimension on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -874,7 +874,7 @@
 
 				}
 
-				@media screen and (max-width: 400px) {
+				@media screen and (max-width: 380px) {
 
 					.gallery .content .media {
 						width: 100%;
